src/main/java/com/example/bank/_core/errors/exception/Exception400.java
package com.example.bank._core.errors.exception;

public class Exception400 extends RuntimeException{

    public Exception400(String msg) {
        super(msg);
    }
}
